<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:rotationY="1">


    <LinearLayout
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/titleparam"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/ParamText"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_1"

            android:textAlignment="center" />

        <EditText
            android:id="@+id/textplayer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/enter_name"
            android:textAlignment="center"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_2"

            android:textAlignment="center" />

        <EditText
            android:id="@+id/textplayer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/enter_name"
            android:textAlignment="center"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/typefight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texttypefight"

            android:textAlignment="center" />

        <EditText
            android:id="@+id/texttypefight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/enter_type_fight"
            android:textAlignment="center"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/buttonvalidsetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/validsetting" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="77dp"
        android:layout_height="79dp"
        android:layout_gravity="center|top"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/setting_lines"
        tools:layout_editor_absoluteX="318dp"
        tools:layout_editor_absoluteY="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>