<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/Menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00BCD4"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            android:textAlignment="center"
            app:flow_horizontalAlign="center"
            app:flow_verticalAlign="center">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:onClick="handlerBack"
                android:text="@string/back" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/settings"
                android:textAlignment="center"
                android:textColor="#FFFEFE"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/player1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/player_1"

                            android:textAlignment="center" />

                        <EditText
                            android:id="@+id/textPlayer1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20dp"
                            android:autofillHints=""
                            android:ems="10"
                            android:hint="@string/enter_name"
                            android:inputType="textPersonName"
                            android:textAlignment="center"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/player2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/player_2"

                            android:textAlignment="center" />

                        <EditText
                            android:id="@+id/textPlayer2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="30dp"
                            android:autofillHints=""
                            android:ems="10"
                            android:hint="@string/enter_name"
                            android:inputType="textPersonName"
                            android:textAlignment="center"
                            android:textSize="14sp" />

                        <Spinner
                            android:id="@+id/spinnerTypeFight"
                            android:layout_width="163dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="30dp"
                            android:autofillHints=""
                            android:ems="10"
                            android:hint="@string/enter_type_fight"
                            android:inputType="textPersonName"
                            android:textAlignment="center"
                            android:textSize="14sp" />

                        <Button
                            android:id="@+id/locationBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/get_location"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/actual_location"
                            android:textAlignment="center"

                            />

                        <TextView
                            android:id="@+id/locationCountry"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/actual_location_Country"
                            android:textAlignment="center"

                            />


                        <Button
                            android:id="@+id/fightSettingsActivityBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="30dp"
                            android:text="@string/validsetting" />

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>